@@ -1,5 +1,5 @@
 /*
- *	Copyright (C) 2015 Yizhou Shan <shanyizhou@ict.ac.cn>
+ *	Copyright (C) 2015-2016 Yizhou Shan <shanyizhou@ict.ac.cn>
  *
  *	This program is free software; you can redistribute it and/or modify
  *	it under the terms of the GNU General Public License as published by
@@ -16,12 +16,12 @@
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
- /*
-  * This file describes major device numbers.
-  */
-
 #ifndef _SANDIX_MAJOR_H_
 #define _SANDIX_MAJOR_H_
+
+/*
+ * This file describes major device numbers
+ */
 
 #define UNNAMED_MAJOR		0
 #define MEM_MAJOR		1
